Fixed Typing Gap

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ img.resize {
     max-height:30%;
     border-radius: 50%;
     margin-top: 100px;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
 }
 
 .vl {
@@ -97,14 +97,14 @@ img.resize {
     font-size: 24px;
     color: rgba(0, 0, 0);
     margin: 0 auto;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
     animation: typing 3.5s steps(25,end) 1s 1 normal both,
              blink-caret 600ms steps(25,end) infinite;
   }
   
   @keyframes typing {
     from { width: 0 }
-    to { width: 390px }
+    to { width: 375px }
   }
   
   @keyframes blink-caret {
